Use sqlite3 in dev, mysql in prod

--- a/radiostats/settings/auth.py.example
+++ b/radiostats/settings/auth.py.example
@@ -1,1 +1,7 @@
 LASTFM_API_KEY = '' # API key from Last.fm
+
+DB = {
+    'username': '', # database username
+    'password': '', # database user password
+    'host': '',     # database host
+}
