Get rid of old (public) secret key. store in auth instead.

--- a/radiostats/settings/auth.py.example
+++ b/radiostats/settings/auth.py.example
@@ -5,3 +5,5 @@ DB = {
     'password': '', # database user password
     'host': '',     # database host
 }
+
+SECRET_KEY = '' # your django SECRET_KEY
