--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-logbook
-gevent
-python-dateutil
-django
-django-suit
-django-countries
-pytz
-beets
+BeautifulSoup==3.2.1
+beets==1.3.18
+Django==1.9.7
+django-countries==3.4.1
+django-suit==0.2.19
+gevent==1.1.1
+greenlet==0.4.10
+Logbook==0.12.5
+python-dateutil==2.5.3
+pytz==2016.4
+requests==2.10.0
+simplejson==3.8.2
