--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ django-countries==3.4.1
 django-suit==0.2.19
 gevent==1.1.1
 greenlet==0.4.10
-Logbook==0.12.5
+Logbook
 python-dateutil==2.5.3
-pytz==2016.4
-requests==2.10.0
+pytz
+requests
 simplejson==3.8.2
