--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ beets==1.3.18
 Django==1.9.7
 django-countries==3.4.1
 django-suit==0.2.19
-gevent==1.1.1
-greenlet==0.4.10
+#gevent==1.1.1
+#greenlet==0.4.10
 Logbook
 python-dateutil==2.5.3
 pytz
