--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 BeautifulSoup==3.2.1
 beets==1.3.18
+munkres==1.0.12 # needs to be pinned for py2 compatibility
 Django==1.9.7
 django-countries==3.4.1
 django-suit==0.2.19
