--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       image: python:2.7
     steps:
       - name: Setup environment
-        run: pip install -r requirements.txt
+        run: cd radiostats ; pip install -r requirements.txt
       - name: Download dataset
         id: download-artifact
         uses: dawidd6/action-download-artifact@v8
