--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     container:
       image: python:2.7
     steps:
+      - uses: actions/checkout@v4
       - name: Setup environment
         #run: cd radiostats ; pip install -r requirements.txt
         run: find .
