--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup environment
-        run: cd radiostats ; pip install -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Download dataset
         id: download-artifact
         uses: dawidd6/action-download-artifact@v8
